fixed: horizontal scroll in animations

--- a/assets/styles/index_animations.css
+++ b/assets/styles/index_animations.css
@@ -77,10 +77,10 @@
 }
 
 .menu-navbar-btn {
-  animation: fadeDown 0.6s forwards 0.9s;
+  animation: fade 0.6s forwards 0.9s;
 }
 .cart-container {
-  animation: fadeLeft 0.6s forwards 0.9s;
+  animation: fade 0.6s forwards 0.9s;
 }
 
 .navbar__link {
